--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -1,10 +1,16 @@
 {{extend '../layout/common-admin.html'}}
 {{block 'content'}}
+
+
   <!-- 列表 -->
   <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+      <div class="btn-group" role="group" aria-label="...">
+          <a class="btn btn-success" href="/admin/article">新日志</a>
+          <a class="btn btn-danger" href="/admin/logout">退出</a>
+        </div>
     <ul class="list-group">
       {{each article_list}}
-      <a class="list-group-item">
+      <a href="/admin/article/{{$value.id}}" class="list-group-item" style="cursor: pointer;">
         <span class="badge">{{$value.create_at}}</span>
         {{$value.title}}
       </a>
